k8s/apps/argo-cd/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
  annotations:
    argocd.argoproj.io/sync-wave: "-100"
  labels:
    gateway.joelmccoy.dev/public-routes: "true"
    istio.io/dataplane-mode: ambient
